--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,17 @@
-GITHUB_CLIENT_ID=
-GITHUB_CLIENT_SECRET=
+ENV=development
 
-POSTGRES_USER=
-POSTGRES_PASSWORD=
+ALLOWED_HOSTS=*
+SECRET_KEY=your-secret-key-here
+DEBUG=1
 
-GEMINI_API_KEY=
+GITHUB_CLIENT_ID=your-client-id-here
+GITHUB_CLIENT_SECRET=your-client-secret-here
+
+POSTGRES_DB=your-db-name-here
+POSTGRES_USER=your-db-user-here
+POSTGRES_PASSWORD=your-db-password-here
+
+GEMINI_API_KEY=your-gemini-api-key-here
 
 ACCOUNT_LOGOUT_ON_GET=True
 SOCIALACCOUNT_LOGIN_ON_GET=True
